Refactor commands and improve tile service functionality